# nameCreator

./: ExampleNames.md  Examples.md  LICENSE  MANIFEST.in  README.md  nameCreatorCLI.py  pyproject.toml  setup.cfg  setup.py
NameGen/: __init__.py  nameGen.py  testIt.py
NameGen/FirstNames/Female/: american.txt  french.txt  russian.txt  spanish.txt
NameGen/FirstNames/Male/: american.txt  russian.txt  spanish.txt
NameGen/Last Names/: russian.txt
NameGen/LastNames/: american.txt  french.txt  spanish.txt
NameGen/NameGen/: nameGen.py  testIt.py
NameGen/NameGen/FirstNames/Female/: russian.txt
NameGen/NameGen/FirstNames/Male/: french.txt
nameGen/: LICENSE  README.md  pyproject.toml  setup.cfg
nameGen/src/nameGen/F/: firstF.py
nameGen/src/nameGen/M/: __init__.py  firstM.py
src/nameCreator/: __init__.py
src/nameCreator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nameCreator/F/: __init__.py  firstF.py
src/nameCreator/F/names/: american.txt  chinese.txt  chineseR.txt  finnish.txt  french.txt  german.txt  italian.txt  japanese.txt  japaneseR.txt  russian.txt  swedish.txt
src/nameCreator/L/: __init__.py  last.py
src/nameCreator/L/names/: american.txt  chinese.txt  chineseR.txt  finnish.txt  french.txt  german.txt  italian.txt  japanese.txt  japaneseR.txt  russian.txt  swedish.txt
src/nameCreator/M/: __init__.py  firstM.py
src/nameCreator/M/names/: chinese.txt  chineseR.txt  finnish.txt  (+6 more)
src/nameCreator/nameCreatorCLI/: nameCreatorCLI.py
src/nameGen/: __init__.py
src/nameGen/F/: __init__.py
src/nameGen/L/: __init__.py  last.py
(+5 files in other folders)
