[metadata]
name = nameCreator
version = 0.2.1
author = Justin Huddleston
description = A package to generate names by country
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JHudd435/nameCreator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = unidecode

[options.package_data]
* = *.txt

[options.packages.find]
where = src


